# LakehouseAI

./: .gitlab-ci.yml  AI-INTEGRATION.md  README.md
.claude/: launch.json
.devcontainer/: Codespaces.md  Devcontainer.json  devcontainer.json  setup.sh
deploy/: deploy.sh  env.template  (+1 more)
lakehouse/iceberg-geo-api/: .gitignore  Dockerfile.geoservices  Dockerfile.pygeoapi  README.md  pyproject.toml
lakehouse/iceberg-geo-api/config/: catalog.yml  pygeoapi-config.yml
lakehouse/iceberg-geo-api/docker/: pygeoapi-entrypoint.sh
lakehouse/iceberg-geo-api/scripts/: generate_proto.sh  healthcheck.py  seed_test_data.py
lakehouse/iceberg-geo-api/src/iceberg_geo/: __init__.py
lakehouse/iceberg-geo-api/src/iceberg_geo/formatters/: __init__.py  geoarrow.py
lakehouse/iceberg-geo-api/src/iceberg_geo/geoservices/: __init__.py  app.py  html.py  metadata.py
lakehouse/iceberg-geo-api/src/iceberg_geo/geoservices/proto/: FeatureCollection.proto  FeatureCollection_pb2.py  __init__.py
lakehouse/iceberg-geo-api/src/iceberg_geo/geoservices/routes/: __init__.py  feature_server.py  query.py
lakehouse/iceberg-geo-api/src/iceberg_geo/geoservices/serializers/: __init__.py  esri_json.py  esri_pbf.py  geojson.py
lakehouse/iceberg-geo-api/src/iceberg_geo/pygeoapi_provider/: __init__.py  iceberg.py
lakehouse/iceberg-geo-api/src/iceberg_geo/query/: __init__.py  catalog.py  engine.py  geometry.py  models.py
lakehouse/iceberg-geo-api/tests/: conftest.py  test_esri_pbf_encoder.py  test_geoarrow_formatter.py  test_geoservices_query.py  test_pygeoapi_provider.py  test_query_engine.py
(+104 files in other folders)
